test_src/compiler_errors/types/arithmetic/AddBoolError1.b
class AddBoolError1 {
    void test() {
        println(true + 1);
    }
}
